src/objects/LBI__Score__c.object
<CustomObject>
    <fields>
        <fullName>LBI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lattice Scores</relationshipLabel>
        <relationshipName>LatticeScores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lattice Scores</relationshipLabel>
        <relationshipName>LatticeScores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lattice Scores</relationshipLabel>
        <relationshipName>LatticeScores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__Model__c</fullName>
        <label>Lattice Model</label>
        <referenceTo>LBI__Model__c</referenceTo>
        <relationshipLabel>Lattice Scores</relationshipLabel>
        <relationshipName>LatticeScores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__RatingValue__c</fullName>
        <label>Rating Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ScoreName__c</fullName>
        <label>Score Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ScoreValue__c</fullName>
        <label>Score Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lattice Score</label>
    <nameField>
        <displayFormat>S-{000000000}</displayFormat>
        <label>Lattice Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>